# car_Collision_Detection_orangeLabs

./: README.md
CarCrashDetection_3D_Convolution/: README.md  setup.cfg
CarCrashDetection_3D_Convolution/Car_Crash_Detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CarCrashDetection_3D_Convolution/car_crash_detection/: CrashUtils.py
accidentUtils/: app.py  core_backbone.py  core_dataset.py  core_optical_flow_farneback.py  core_similarity.py  core_similarity_data.py  core_utils.py  core_yolov4.py  finalized_model.sav  object_tracker.py  object_tracker_data.py
data_creating_vif/: 6.30.avi  6.60.avi  6.90.avi  Car_Crash_Data_creating.ipynb
presentation and documentation/: Car Collision Detection.pptx
presentation_documentation/: Car Collision Detection.pptx
