[metadata]
name = Car Crash Detection
version = 0.0.5
author = Mohamed Sebaie
author_email = mohamedsebaie1@gmail.com
description = Car Crash Detection From Surveillance Cameras and Video Streams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MohamedSebaie/Car_Crash_Detection_From_Surveillance_Cameras-PyTorch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True